Changes for 4.0.3rc1

New features:

Bug fixes:
.......PS. [ZBX-15200] fixed host, trigger and item count calculation; fixed required performance calculation (vso)
....I....T [ZBX-15158] fixed graph name for cache usage in proxy and server templates (kalimulin)
...G....S. [ZBX-15178] fixed wrong behaviour when referencing unexisting capture groups in item regexp preprocessing, general pcre code improvements (Andris, kalimulin)

--------------------------------------------------------------------------------
Changes for 4.0.2

4.0.2rc1 was released as 4.0.2 without any changes

--------------------------------------------------------------------------------
Changes for 4.0.2rc1

New features:
.......PS. [ZBXNEXT-3848] added validation of update interval, custom interval, history storage period and trend storage period in low-level discovery (vso)
....I..... [ZBXNEXT-4841] removed hardcoded locations for iconv.h and pthread.h; thanks to Helmut Grohne for the patch (kalimulin)
...G...... [ZBXNEXT-3047] fixed compilation errors on Windows platform with static OpenSSL libraries (Andris, viktors)
...G...PS. [ZBXNEXT-4836] added license information and OpenSSL linking exception to README file, show crypto library version when started with '-V' (Andris)

Bug fixes:
.......PS. [ZBX-15171] fixed crash in ODBC when creating JSON from null db values, fixed memory leak (kalimulin)
..F....... [ZBX-15045] fixed a case where a disable multiselect looks like a similar to enabled text field (vasilijs)
..F....... [ZBX-14927] fixed filter by host group without real hosts in triggers top 100, dashboard widgets, screens (talbergs)
....I..... [ZBX-13662] fixed duplication of file system type in global regular expression for file systems discovery (MVekslers)
....I....T [ZBX-15036] added system.cpu.util[,guest], system.cpu.util[,guest_nice] to OS Linux template (kalimulin)